# tree-sitter-jjrevset

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jjrevset.pc.in
bindings/c/tree_sitter/: tree-sitter-jjrevset.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jjrevset/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJjRevsetTests/: TreeSitterJjRevsetTests.swift
src/: grammar.json  node-types.json
